SkiaRenderer: Use the correct DDL recorder to create SkImage

Bug: 906688
Change-Id: If53d2ad9420440a5b9cb214b2c23fd64168187b9
Reviewed-on: https://chromium-review.googlesource.com/c/1348862
Reviewed-by: weiliangc <weiliangc@chromium.org>
Commit-Queue: Peng Huang <penghuang@chromium.org>
Cr-Commit-Position: refs/heads/master@{#610638}
Former-commit-id: 94c1fb49f1e8db63942bd1b4f99be75e3f716a62